# sphere-adrc-portal

./: .gitattributes  .gitignore  BACKEND_DESIGN.md  BUTTERBASE_BACKEND_DESIGN.md  ENGINEER_BRIEF.md  README.md  sphere_business_model.html
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/sphere_backend/: __init__.py  app.py  config.py
backend/sphere_backend/api/: __init__.py  agent.py  auth.py  billing.py  health.py
backend/sphere_backend/auth/: __init__.py  dependencies.py  jwt.py  provider.py
backend/sphere_backend/billing/: __init__.py  payments.py  rates.py  reserve.py  stripe_client.py  usage.py
backend/sphere_backend/db/: __init__.py  base.py  models.py  session.py  types.py
backend/sphere_backend/proxy/: __init__.py  sse.py  upstream.py
backend/sphere_backend/usage/: __init__.py  reclaim.py  service.py
backend/sphere_backend/users/: __init__.py  provisioning.py
backend/sphere_backend/wallet/: __init__.py  core.py  repository.py
backend/tests/: test_agent_proxy.py  test_auth.py  test_billing.py  test_billing_endpoints.py  test_db_provisioning.py  test_health.py  test_proxy_sse.py  test_reclaim.py  test_stripe_client.py  test_stripe_webhooks.py  test_usage_service.py  test_wallet.py  test_wallet_concurrency.py  test_wallet_repository.py
butterbase/: PARITY.md  README.md
butterbase/functions/: balance.ts  credits-claim.ts  gateway.ts  keys.ts  (+1 more)
portal/: index.html  stanford_adrc_dua_2025.docx
sdk/python/: README.md  pyproject.toml
sdk/python/src/sphere/: __init__.py  _client.py
sdk/python/tests/: test_client.py
(+33 files in other folders)
